--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -17,5 +17,5 @@ jobs:
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@master
         with:
-          image_name: vrising
+          image_name: corylwtsn/vrising
           github_token: ${{ secrets.GH_TOKEN }}
